# loop_subdivision

./: CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  main.cpp  subdiv.cpp
src/: Array.h  Avltree.h  Boundary.cpp  Boundary.h  Edge.cpp  Edge.h  EditTrait.h  Face.cpp  Face.h  FormTrait.cpp  FormTrait.h  Graph.cpp  Graph.h  HalfEdge.cpp  HalfEdge.h  Homology.cpp  Homology.h  Iterators.h  LOOP.cpp  LOOP.h  Makefile  Makefile.dep  Mesh.cpp  Mesh.h  OBJFileReader.cpp  OBJFileReader.h  Point.cpp  Point.h  SList.h  SolidDelegate.cpp  SolidDelegate.h  StringTokenIterator.h  StringTokenizer.cpp  StringTokenizer.h  TopologyException.cpp  TopologyException.h  Trait.cpp  Trait.h  Vertex.cpp  Vertex.h  (+1 more)
src_old/: Array.h  Avltree.h  Edge.cpp  Edge.h  Edge_old.cpp  Edge_old.h  EditTrait.h  FException.cpp  FException.h  Face.cpp  Face.h  FaceNormalTrait.h  Face_old.cpp  Face_old.h  FormTrait.cpp  HalfEdge.cpp  HalfEdge.h  HalfEdge_old.cpp  HalfEdge_old.h  Iterators.h  Iterators_old.h  Loop.cpp  Loop.h  Mesh.cpp  Mesh.h  MeshDelegate.cpp  MeshDelegate.h  OBJFileReader.cpp  OBJFileReader.h  Parser.cpp  Parser.h  Point.cpp  Point.h  Point_old.cpp  Point_old.h  SList.h  Solid.cpp  Solid.h  StringTokenIterator.h  StringTokenizer.cpp  (+10 more)
